# Zorro

./: .gitignore  BEHAVIORS.md  BUILD_PHASES.md  CLAUDE.md  DATA_CONTRACTS.md  EXPLORATION_SUMMARY.md  FILE_REFERENCE_GUIDE.md  LOGGING.md  PROMPTS.md  README.md  TESTING.md  ZORRO_CURRENT_REVIEW_IMPLEMENTATION_EXPLORATION.md
apps/api/: BUILD_LOG.md  PARSER_LOG.md  pyproject.toml
apps/api/src/: config.py  main.py
apps/api/src/clients/: anthropic.py  perplexity.py
apps/api/src/models/: __init__.py  document.py  events.py  export.py  finding.py  review.py
apps/api/src/parsers/: __init__.py  base.py  docx_parser.py  pdf_parser.py
apps/api/src/services/: job_manager.py  sse.py
backend/: .env.example  00_MASTER_BUILD.md  01_PYDANTIC_MODELS.md  02_GLOBAL_CONFIG.md  03_COMPOSER_PROMPTS.md  04_CORE_INFRASTRUCTURE.md  05_TDD_TESTS.md  06_ASSEMBLER.md  BUILD_LOG.md  IMPLEMENTATION_PROMPTS.md  QUICKSTART.md  TDD_PROTOCOL.md  audit_issues.md  pyproject.toml  start.sh
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  briefing.py  clarity.py
backend/app/agents/adversary/: __init__.py  panel.py  reconcile.py  single.py
backend/app/agents/domain/: __init__.py  evidence_synthesizer.py  pipeline.py  query_generator.py  search_executor.py  target_extractor.py
backend/app/agents/rigor/: __init__.py  finder.py  (+1 more)
backend/app/api/: __init__.py
backend/app/composer/: __init__.py  builder.py  library.py
backend/app/config/: __init__.py  models.py  settings.py
backend/app/core/: __init__.py  llm.py  perplexity.py
backend/app/models/: __init__.py  briefing.py  chunks.py  document.py  domain.py  events.py  finding.py  metrics.py  review.py
backend/app/parsers/: __init__.py  base.py  docx_parser.py  pdf_parser.py
backend/app/services/: __init__.py  assembler.py  chunker.py  orchestrator.py
backend/docs/: BACKEND_ACTION_PLAN.md  TODO_2025-01-12.md  TODO_2025-01-15.md
backend/docs/fixtures/: short_article.json  short_article_findings.json
backend/scripts/: fix_fixture.py
backend/tests/integration/: test_adversary.py  test_api.py  test_briefing.py  test_clarity.py  test_domain.py  test_orchestrator.py  test_rigor.py  test_sse.py
backend/tests/unit/: test_assembler.py  test_chunker.py  test_composer.py  test_config.py  test_models.py  test_setup.py
(+53 files in other folders)
