[project]
name = "zorro-backend"
version = "0.1.0"
description = "ZORRO - Multi-agent document review system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "anthropic>=0.18.0",
    "instructor>=1.0.0",
    "tenacity>=8.2.0",
    "python-multipart>=0.0.6",
    "structlog>=24.1.0",
    # Document parsing
    "PyMuPDF>=1.23.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
